--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -45,21 +45,21 @@ services:
       - "/tmp/data/spark:/data"   
 #      - "/tmp/data/spark:/src"
 
-  spark-worker:
-    image: docker.io/bitnami/spark:3.4
-    container_name: spark-worker
-    networks:
-      - net01
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark:7077
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
+#  spark-worker:
+#    image: docker.io/bitnami/spark:3.4
+#    container_name: spark-worker
+#    networks:
+#      - net01
+#    environment:
+#      - SPARK_MODE=worker
+#      - SPARK_MASTER_URL=spark://spark:7077
+#      - SPARK_WORKER_MEMORY=1G
+#      - SPARK_WORKER_CORES=1
+#      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+#      - SPARK_RPC_ENCRYPTION_ENABLED=no
+#      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+#      - SPARK_SSL_ENABLED=no
+#      - SPARK_USER=spark
 
   data_producer:
     build: data_producer
