--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     container_name: kafka
     hostname: kafka
     ports:
-      - "9092:9092"
+#      - "9092:9092"
       - "9094:9094"
     networks:
       - net01
-    volumes:
-      - "/tmp/data/kafka:/bitnami"
+#    volumes:
+#      - "/tmp/data/kafka:/bitnami"
     environment:
       # KRaft settings
       - KAFKA_CFG_NODE_ID=0
@@ -38,11 +38,11 @@ services:
     ports:
       - '8080:8080'
     networks:
-      - '8080:8080'
-    networks:
       - net01
-    volumes:
-      - "/tmp/data/spark:/data"   
+    depends_on:
+      - kafka
+#    volumes:
+#      - "/tmp/data/spark:/data"   
 #      - "/tmp/data/spark:/src"
 
 #  spark-worker:
@@ -72,32 +72,7 @@ services:
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
     container_name: elastic
-    ports:
-      - 9200:9200
-    networks:
-      - net01
-    environment:   
-      - xpack.security.enabled=false
-      - SPARK_MASTER_URL=spark://spark:7077
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
-
-  data_producer:
-    build: data_producer
-    container_name: data_producer
-    networks:
-      - net01
-    depends_on:
-      - kafka
-
-  elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
-    container_name: elastic
+    hostname: elastic
     ports:
       - 9200:9200
     networks:
