--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -72,6 +72,7 @@ services:
     container_name: data_producer
     networks:
       - net01
+    depends_on:
       kafka:
         condition: service_healthy
 
