--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -89,8 +89,8 @@ services:
       - discovery.type=single-node
     healthcheck:
       test: ["CMD", "CURL", "http://localhost:9200"]
-      interval: 5s
-      timeout: 5s
+      interval: 1m30s
+      timeout: 10s
       retries: 5
 
   kafka-connect:
