--- a/docker-compose/data_producer/.env
+++ b/docker-compose/data_producer/.env
@@ -1,2 +1,2 @@
-P_BOOTSTRAP_SERVERS=kafka:9092,kafka:9093,kafka:9094
+P_BOOTSTRAP_SERVERS=kafka:9092,localhost:9093,localhost:9094
 TOPIC=test-inter
