--- a/docker-compose/spark-master/Dockerfile
+++ b/docker-compose/spark-master/Dockerfile
@@ -1,8 +1,8 @@
 FROM bitnami/spark:3.4
-COPY ./spark-sql-kafka-0-10_2.13-3.4.1.jar /opt/bitnami/spark/jars/spark-sql-kafka-0-10_2.13-3.4.1.jar
+#COPY ./spark-sql-kafka-0-10_2.13-3.4.1.jar /opt/bitnami/spark/jars/spark-sql-kafka-0-10_2.13-3.4.1.jar
 COPY ./src/* /src/
 RUN ["pip3", "install", "kafka-python"]
 CMD ["/bin/sh", "-c", "spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.13:3.4.1 /src/goal1.py &\
-spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.13:3.4.1 /src/goal2.py &\
-spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.13:3.4.1 /src/goal3.py &\
-spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.13:3.4.1 /src/goal4.py"]
+spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.1 /src/goal2.py &\
+spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.1 /src/goal3.py &\
+spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.1 /src/goal4.py"]
